# telegram_bot

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.MD  TODO.md  docker-compose.yml  init.sql  main.py  pyproject.toml
Project_telegram/: .env.template  Dockerfile  main.py  pyproject.toml
Project_telegram/alembic/: env.py
Project_telegram/alembic/versions/: 2025_11_23_0020-329e4ba279be_create_user_table.py  2025_11_26_1626-de5acce4a81a_create_table_users.py  2025_11_26_1635-723f56f681d4_create_new_table_users.py  2025_11_29_1533-196b0eb94cb6_update_users_and_create_history.py
Project_telegram/api/: handlers.py
Project_telegram/api/Dependencies/: __init__.py  save_visit.py
Project_telegram/api/button_builder/: button_entertaining.py  button_learning.py  button_menu.py
Project_telegram/api/button_default/: command_gpt.py
Project_telegram/api/example_practice/: new_router.py  practice_replay_keyboard.py
Project_telegram/api/mapping_button/: __init__.py  button_map.py
Project_telegram/api/text_gpt/: file_gpt.py
Project_telegram/core/: config.py
Project_telegram/core/help_core/: help_commands.py
Project_telegram/core/model/: Base.py  States_button.py  __init__.py  callback_data.py  gpt_message.py  helper_db.py  history.py  user.py
Project_telegram/core/model/id_mixin/: __init__.py  id_primiry_key.py
Project_telegram/core/schemas/: schema_history.py  schema_message_gpt.py  schemas_user.py
api/: handlers.py
api/button_builder/: button_learning.py
api/button_hadler/: __init__.py  button_entertaining.py  (+2 more)
core/: config.py
(+2 files in other folders)
