[tool.poetry]
package-mode=false

[tool.poetry.dependencies]
python="^3.12.0"
aiogram = "^3.22.0"
aiohttp = "3.12.3"
dotenv = "^0.9.9"
pydantic-settings = "^2.12.0"
sqlalchemy = "^2.0.44"
asyncpg = "^0.30.0"
alembic = "^1.17.2"
apiai = "^1.2.3"

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)"
]
